# Test

./: ASSESSMENT.md  HOW_TO_RUN.md  Makefile  README.md  pyproject.toml
app/: __init__.py  cli.py  main.py
app/api/: dependencies.py  routes.py  schemas.py
app/clients/: messages_api.py  messages_repository.py
app/core/: app.py  config.py  logging.py
app/domain/: messages.py  processed.py
app/evaluation/: harness.py
app/pipelines/: preprocess.py  processed_repository.py
app/services/: ensemble_retriever.py  hallucination.py  insights.py  mock_llm.py  models.py  qa.py  vectorstore.py
data/eval/: gold.jsonl
data/processed/: messages.meta.json  messages.parquet
data/raw/: messages.meta.json  messages.parquet
reports/: insights.md
scripts/: run_local.sh
tests/: conftest.py  test_api.py  test_messages_api.py  test_preprocess.py
vectorstore/: faiss_index.manifest.json
vectorstore/faiss_index/: index.faiss  index.pkl
