[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[project]
name = "november-qa"
version = "0.1.0"
description = "Open-source LLM-powered question answering service over member messages"
readme = "README.md"
authors = [{name = "Your Name", email = "you@example.com"}]
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "httpx>=0.27",
  "pydantic>=2.8",
  "pydantic-settings>=2.2",
  "structlog>=24",
  "langchain>=0.2",
  "langchain-community>=0.2",
  "langchainhub>=0.1",
  "sentence-transformers>=2.7",
  "faiss-cpu>=1.8",
  "rank-bm25>=0.2",
  "pandas>=2.2",
  "pyarrow>=17.0",
  "typer>=0.12",
  "spacy>=3.7",
  "transformers>=4.44",
  "torch>=2.3",
  "huggingface-hub>=0.24",
  "textblob>=0.18",
  "emoji>=2.12",
  "tenacity>=8.3",
  "python-dotenv>=1.0",
  "orjson>=3.10",
  "numpy>=1.26"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "respx>=0.21",
  "httpx>=0.27",
  "coverage>=7.5",
  "ruff>=0.5",
  "black>=24.4",
  "mypy>=1.10",
  "types-requests>=2.32",
  "types-setuptools>=74.0",
  "nox>=2024.6",
  "rich>=13.7"
]

docs = [
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.25"
]

[tool.black]
target-version = ["py312"]
line-length = 100

[tool.ruff]
line-length = 100
src = ["app", "tests"]
select = ["F", "E", "W", "I", "N", "UP", "B", "A", "C4", "DTZ", "DJ", "S", "SIM", "RUF"]
ignore = ["E203", "S101", "B008", "ANN101", "ANN102"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_optional = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
show_missing = true
skip_covered = true
